examples-generated/namespaced/vpc/v1alpha1/gateway.yaml
apiVersion: vpc.yandex-cloud.upjet.m.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: vpc/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: my_gw
  name: my-gw
  namespace: upbound-system
spec:
  forProvider:
    name: foobar
    sharedEgressGateway:
    - {}
