examples-generated/namespaced/vpc/v1alpha1/routetable.yaml

apiVersion: vpc.yandex-cloud.upjet.m.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: vpc/v1alpha1/routetable
  labels:
    testing.upbound.io/example-name: egress-gateway
  name: egress-gateway
  namespace: upbound-system
spec:
  forProvider:
    name: egress-gateway
    sharedEgressGateway:
    - {}
